Mobile footer contrast fix

--- a/src/documents/styles/modules/footer.css.less
+++ b/src/documents/styles/modules/footer.css.less
@@ -296,6 +296,9 @@
 			&.toronto, &.chicago, &.chernihiv, &.vancouver {
 				width: 100%;
 			}
+			span {
+				color: #7e7e7e;
+			}
 		}
 	}
 }
